--- a/Cinev/Cinev/App.xaml
+++ b/Cinev/Cinev/App.xaml
@@ -14,30 +14,52 @@
             <On Platform="UWP" Value="Assets/Fonts/materialdesignicons-webfont.ttf#Material Design Icons" />
         </OnPlatform>
 
+        <!--  colors  -->
+        <Color x:Key="MainTextColor">#5F6574</Color>
+        <Color x:Key="SubTextColor">#B9BCC3</Color>
+        <Color x:Key="ButtonColor">#5ACB6E</Color>
+        <Color x:Key="PageColor">#F5F7F9</Color>
 
-        <ResourceDictionary>
-            <Style x:Key="headerLabel" TargetType="Label">
-                <Setter Property="HorizontalOptions" Value="Center" />
-               
-                <Setter Property="FontFamily" Value="Raleway" />
-                <Setter Property="FontAttributes" Value="Bold" />
+        <!--  font families  -->
+        <OnPlatform x:Key="BoldFont" x:TypeArguments="x:String">
+            <On Platform="Android" Value="Raleway-Bold.ttf#Open Sans" />
+            <On Platform="UWP" Value="/Assets/OpenSans-Bold.ttf#Open Sans" />
+            <On Platform="iOS" Value="OpenSans-Bold" />
+        </OnPlatform>
+        <OnPlatform x:Key="RegularFont" x:TypeArguments="x:String">
+            <On Platform="Android" Value="Raleway-Regular.ttf#Open Sans" />
+            <On Platform="UWP" Value="/Assets/OpenSans-Regular.ttf#Open Sans" />
+            <On Platform="iOS" Value="OpenSans-Regular" />
+        </OnPlatform>
+        <OnPlatform x:Key="LightFont" x:TypeArguments="x:String">
+            <On Platform="Android" Value="Raleway-Light.ttf#Open Sans" />
+            <On Platform="UWP" Value="/Assets/OpenSans-Light.ttf#Open Sans" />
+            <On Platform="iOS" Value="OpenSans-Light" />
+        </OnPlatform>
 
-                
+        <!--  styles  -->
+        <Style x:Key="MovieName" TargetType="Label">
+            <Setter Property="FontFamily" Value="{StaticResource BoldFont}" />
+            <Setter Property="FontSize" Value="14" />
+            <Setter Property="TextColor" Value="{StaticResource MainTextColor}" />
+        </Style>
 
-                <Setter Property="WidthRequest" Value="200" />
-                <Setter Property="TextColor" Value="#727272" />
-            </Style>
+        <Style x:Key="Rating" TargetType="Label">
+            <Setter Property="FontFamily" Value="{StaticResource BoldFont}" />
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="TextColor" Value="{StaticResource MainTextColor}" />
+        </Style>
+        <Style x:Key="SubText" TargetType="Label">
+            <Setter Property="FontFamily" Value="{StaticResource RegularFont}" />
+            <Setter Property="FontSize" Value="12" />
+            <Setter Property="TextColor" Value="{StaticResource SubTextColor}" />
+        </Style>
+        <Style x:Key="ButtonText" TargetType="Label">
+            <Setter Property="FontFamily" Value="{StaticResource BoldFont}" />
+            <Setter Property="FontSize" Value="14" />
+            <Setter Property="TextColor" Value="White" />
+        </Style>
 
-            <Style x:Key="textLabel" TargetType="Label">
-                <Setter Property="HorizontalOptions" Value="Center" />
-                <Setter Property="FontFamily" Value="Raleway" />
-                <Setter Property="TextColor" Value="#dddddd" />
-                <Setter Property="VerticalOptions" Value="CenterAndExpand" />
-                <Setter Property="FontAttributes" Value="Bold" />
-                <Setter Property="WidthRequest" Value="200" />
-                <Setter Property="TextColor" Value="DarkRed" />
-            </Style>
-        </ResourceDictionary>
 
 
 
