--- a/Cinev/Cinev/Views/UpcomingDetails.xaml
+++ b/Cinev/Cinev/Views/UpcomingDetails.xaml
@@ -3,13 +3,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
              mc:Ignorable="d"
              x:Class="Cinev.Views.UpcomingDetails">
     <ContentPage.Content>
         <StackLayout>
-            <Image x:Name="MovieImage" HeightRequest="100" WidthRequest="100"/>
-            <Label x:Name="Title"/>
-            <Label x:Name="OverView"/>
+
+                               
+                                    
+                <Image  HeightRequest="230" x:Name="MovieImage"   />
+          
+          
+            <Label x:Name="Title" Margin="40,20,0,30" Style="{StaticResource MovieNameBig}"/>
+            <Label x:Name="OverView" Padding="10"  Style="{StaticResource Description}"/>
             <Button x:Name="AddToWish" Text="Add" Clicked="AddToWish_Clicked" />
 
         </StackLayout>
