--- a/Cinev/Cinev/Views/UpcomingDetails.xaml
+++ b/Cinev/Cinev/Views/UpcomingDetails.xaml
@@ -16,28 +16,33 @@
           
             <Label x:Name="Title" Margin="40,20,0,10" Style="{StaticResource MovieNameBig}"/>
             <StackLayout Orientation="Horizontal">
-                <Label x:Name="Genres" Margin="40,0,0,10" Style="{StaticResource SubText}"/>
+                <Label x:Name="Genres" Margin="40,0,0,10" Style="{StaticResource Genre}"/>
                 <yummy:PancakeView  Margin="0,0,50,0"  VerticalOptions="Center" HorizontalOptions="EndAndExpand"  BindableLayout.ItemsSource="{Binding Icons}" BackgroundColor="#fefdf3" CornerRadius="15" HeightRequest="30" WidthRequest="35">
-                                <Label 
-                                    x:Name="HeartIcon"
-                                    
-                                    
+                    <Label 
+                         x:Name="HeartIcon"
                         FontFamily="{StaticResource MaterialFontFamily}" 
                         FontSize="30" 
                                     
                         HorizontalOptions="Center"
                         Text="{Binding HeartOutline}" 
                         TextColor="#ff4545" 
-                                  
-                        VerticalOptions="Center" />  
-                    
-                    
+                          
+                        VerticalOptions="Center" >
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer
+                Tapped="OnTapGestureRecognizerTapped"
+                NumberOfTapsRequired="1" />
+                        </Label.GestureRecognizers>
+
+                    </Label>
+
+
                 </yummy:PancakeView>
 
 
             </StackLayout>
           
-            <Label x:Name="OverView" Padding="20,10,10,10"  Style="{StaticResource Description}"/>
+            <Label x:Name="OverView" Padding="20"  Style="{StaticResource Description}"/>
            
 
         </StackLayout>
