--- a/Cinev/Cinev/Views/WishList.xaml
+++ b/Cinev/Cinev/Views/WishList.xaml
@@ -3,13 +3,100 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
              mc:Ignorable="d"
              x:Class="Cinev.Views.WishList">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+    <ContentPage.Content  HeightRequest="320" >
+        <ListView  IsPullToRefreshEnabled="true" RefreshControlColor="Red"  RowHeight="300"  ItemsSource="{Binding upcomings}" >
+
+            <ListView.ItemTemplate  HeightRequest="320" >
+
+                <DataTemplate>
+
+                    <ViewCell >
+                        <yummy:PancakeView Margin="10" 
+                                           Padding="10" 
+                                            BackgroundColor="White" 
+                                            CornerRadius="20" 
+                                            HeightRequest="320" 
+                                            HorizontalOptions="FillAndExpand">
+
+
+
+
+                            <StackLayout MinimumHeightRequest="400" Orientation="Horizontal">
+
+
+                                <yummy:PancakeView
+                                 
+                                        CornerRadius="10" 
+                                       
+                                        HorizontalOptions="Center" 
+                                    Margin="0,0,20,0"
+                                       
+                                        VerticalOptions="Center" 
+                                       >
+
+                                    <Image  Aspect="AspectFill" Source="{Binding FullPath}" />
+                                </yummy:PancakeView>
+
+
+
+                                <StackLayout WidthRequest="170" Spacing="20" Orientation="Vertical">
+                                    <Label 
+                                            FontSize="18" 
+                                        Margin="5,10,0,0"
+                                            LineBreakMode="NoWrap" 
+                                            Style="{StaticResource MovieName}" 
+                                            Text="{Binding Title}" />
+
+
+                                    <yummy:PancakeView BackgroundColor="#fefdf3" CornerRadius="15" HeightRequest="30" HorizontalOptions="StartAndExpand" WidthRequest="70">
+                                        <StackLayout HorizontalOptions="Center" Orientation="Horizontal" VerticalOptions="Center">
+                                            <Label FontFamily="{StaticResource MaterialFontFamily}" FontSize="20" Text="&#xf4ce;" TextColor="#f7b602" />
+                                            <Label FontSize="16" Style="{StaticResource Rating}" Text="{Binding VoteAverage}" TextColor="#f7b602" />
+                                        </StackLayout>
+                                    </yummy:PancakeView>
+
+                                    <Label FontSize="16" VerticalOptions="EndAndExpand" HorizontalOptions="EndAndExpand" Style="{StaticResource SubText}" Text="{Binding ReleaseDateString}" TextColor="#b2b2b2" />
+
+
+                                </StackLayout>
+
+
+
+
+
+
+                            </StackLayout>
+
+
+
+
+
+
+                        </yummy:PancakeView>
+
+
+
+
+
+
+
+
+
+
+
+                    </ViewCell>
+
+
+                </DataTemplate>
+
+            </ListView.ItemTemplate>
+
+
+        </ListView>
+
+
     </ContentPage.Content>
 </ContentPage>
