--- a/Cinev/Cinev/Views/Schedules.xaml
+++ b/Cinev/Cinev/Views/Schedules.xaml
@@ -3,13 +3,70 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
              mc:Ignorable="d"
              x:Class="Cinev.Views.Schedules">
     <ContentPage.Content>
+
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+
+            <SearchBar Placeholder="Search items..."
+           CancelButtonColor="Orange"
+           PlaceholderColor="Orange"
+           TextColor="Orange"
+                   TextChanged="SearchBar_TextChanged"
+           HorizontalTextAlignment="Center"
+           FontSize="Medium"
+           FontAttributes="Italic" />
+
+            <ListView    RowHeight="150" x:Name="searchResults" >
+
+                <ListView.ItemTemplate  HeightRequest="200" >
+
+                    <DataTemplate>
+
+                        <ViewCell >
+
+                            <yummy:PancakeView Margin="10" 
+                                           Padding="10" 
+                                            BackgroundColor="White" 
+                                            CornerRadius="20" 
+                                            HeightRequest="150" 
+                                            HorizontalOptions="FillAndExpand">
+                                <StackLayout>
+
+                                    <BoxView Margin="20,0" BackgroundColor="LightGray" HeightRequest="0.5" />
+                                    <StackLayout Margin="20" Orientation="Horizontal">
+                                        <Label FontSize="30" Style="{StaticResource MovieName}" Text="{Binding Title}" />
+
+                                    </StackLayout>
+
+
+                                </StackLayout>
+
+
+
+                            </yummy:PancakeView>
+
+
+
+
+
+                        </ViewCell>
+
+
+                    </DataTemplate>
+
+                </ListView.ItemTemplate>
+
+
+            </ListView>
+
+
+
+
+
         </StackLayout>
+
     </ContentPage.Content>
 </ContentPage>
