--- a/Cinev/Cinev/Views/Login.xaml
+++ b/Cinev/Cinev/Views/Login.xaml
@@ -4,7 +4,8 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="Cinev.Views.Login">
+             x:Class="Cinev.Views.Login"
+              NavigationPage.HasNavigationBar="false">
     <ContentPage.Content>
         <StackLayout
         VerticalOptions="Center"
