--- a/Cinev/Cinev/Views/Signup.xaml
+++ b/Cinev/Cinev/Views/Signup.xaml
@@ -37,12 +37,23 @@
             />
 
             <Button
-            Text="Enter"
+            Text="Sign up"
            Clicked="SignupButton"
             Margin="60, 40"
             BackgroundColor="#4682B4"
             TextColor="White"
             />
+
+            <Button
+            Text="Log in"
+               x:Name="login"
+                Clicked="login_Clicked"
+   
+            Margin="60, 40"
+            BackgroundColor="#4682B4"
+            TextColor="White"
+            />
+
 
         </StackLayout>
     </ContentPage.Content>
